--- a/blaster2.html
+++ b/blaster2.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
@@ -107,28 +108,23 @@ init = function()
 		entities[4] = QuickCollection();
 		entities[8] = QuickCollection();
 		
-//		var entity2 = CreatePlayer(90,67,83); // z,c,s
-
 		// create some random enemies
-		for ( var l = 0; l < 10; l++ )
+		for ( var l = 0; l < 100; l++ )
 		{
-			CreateEnemy(l % 2);
+			if (l % 2)
+			{
+				prefabs.CreateEnemyA(Math.random()*(gameWidth-50) + 25,Math.random()*(gameHeight-50) + 25);
+			}
+			else
+			{
+				prefabs.CreateEnemyB(Math.random()*(gameWidth-50) + 25,Math.random()*(gameHeight-50) + 25);
+			}
 		}
 
-		var entity = CreatePlayer(37,39,38,90);// cursor keys, z
-		
+		prefabs.CreatePlayer(37,39,38,90);
+
 		timerId = setInterval ( main, Math.floor(1000/50));
 	}
-}
-
-CreatePlayer = function(keyleft, keyright, keyaccelerate, keyshoot)
-{
-	return prefabs.CreatePlayer(keyleft, keyright, keyaccelerate, keyshoot);
-}
-
-CreateEnemy = function (wrapFlag)
-{
-	return prefabs.CreateEnemyA(Math.random()*(gameWidth-50) + 25,Math.random()*(gameHeight-50) + 25);
 }
 
 main = function ()
@@ -155,7 +151,7 @@ main = function ()
 	SysEnemies();
 	SysPhysics();
 	SysRender();
-	SysCollisionsV2();
+	SysCollisions();
 	SysDestroyer();
 }
 
@@ -366,46 +362,6 @@ SysRender = function()
 
 SysCollisions = function()
 {
-//	for ( var eIdx=0; eIdx < entities.length; eIdx++)
-//	{
-//		var e = entities.data[eIdx];
-//		if (e && e.components["Position"] && e.components["Visible"] && e.components["Collide"])
-//		{
-//			var topleft = e.components["Visible"].Topleft;
-//			var bottomright = e.components["Visible"].Bottomright;
-//			var pos = e.components["Position"].Position;
-//
-//			for ( var eIdx2=0; eIdx2 < entities.length; eIdx2++)
-//			{
-//				var e2 = entities.data[eIdx2];
-//				if (e2 && e2.components["Position"] && e2.components["Visible"] && e2.components["Collide"] 
-//					&& (e2.components["Visible"].Layer & e.components["Collide"].Collisionlayers))
-//				{
-//					if ( e != e2)
-//					{
-//						var topleft2 = e2.components["Visible"].Topleft;
-//						var bottomright2 = e2.components["Visible"].Bottomright;
-//						var pos2 = e2.components["Position"].Position;
-//						// see if this other entity has collided with us
-//						// Note this is all terribly inneficient but is 
-//						// ok for a small amount of sprites
-//
-//						if ( pos.x + topleft.x < pos2.x + bottomright2.x
-//							&& pos.x + bottomright.x > pos2.x + topleft2.x
-//							&& pos.y + topleft.x < pos2.y + bottomright2.y
-//							&& pos.y + bottomright.y > pos2.y + topleft2.y)
-//						{
-//							e.components["Collide"].Collided = true;
-//						}
-//					}
-//				}
-//			}
-//		}
-//	}
-}
-
-SysCollisionsV2 = function()
-{
 	for ( var layer = 0; layer < LAYER_LAST_LAYER; layer == 0 ? layer = 1 : layer = layer << 1)
 	{
 		for ( var eIdx=entities[layer].length-1; eIdx >= 0; eIdx--)
@@ -571,14 +527,14 @@ SysEnemies = function()
 	{
 		for ( var p = 0; p < 50; p++)
 		{
-//			var entity = Entity();
-//			var colour = colour;
-//			entity.AddComponent(CompPosition(pos.x,pos.y,0));
-//			entity.AddComponent(CompPhysics((Math.random()-.5)*2,(Math.random()-.5)*2,1,1));
-//			entity.AddComponent(CompLifeSpan(50 + Math.random()*50));
-//			entity.AddComponent(CompVisible(explosionData,colour,8));
-//			entities.Insert(entity);
-//			prefabs.CreateParticle(pos.x,pos.y,(Math.random()-.5)*2,(Math.random()-.5)*2,colour);
+			var entity = Entity();
+			var colour = colour;
+			entity.AddComponent(CompPosition(pos.x,pos.y,0));
+			entity.AddComponent(CompPhysics((Math.random()-.5)*2,(Math.random()-.5)*2,1,1));
+			entity.AddComponent(CompLifeSpan(50 + Math.random()*50));
+			entity.AddComponent(CompVisible(explosionData,colour,8));
+			entities.Insert(entity);
+			prefabs.CreateParticle(pos.x,pos.y,(Math.random()-.5)*2,(Math.random()-.5)*2,colour);
 		}
 	}
 }
@@ -633,11 +589,6 @@ SysPlayer = function()
 		var e = entities[LAYER_PLAYER_SHOT].data[eIdx];
 		if (e && e.components["PlayerShot"] && e.components["Position"] && e.components["Physics"])
 		{
-			CheckShotCollided(e);
-		}		
-
-		function CheckShotCollided ( e)
-		{
 			if ( e.components["Collide"])
 			{
 				if ( e.components["Collide"].Collided)
@@ -645,21 +596,12 @@ SysPlayer = function()
 					e.components["Collide"].Destroy = true;
 				}
 			}
-		}
+		}		
 	}
 	
 	function CreateShot(pos,velocity, rotate)
 	{
 		prefabs.CreatePlayerShot(pos.x,pos.y,velocity.x,velocity.y, rotate)
-
-//		var entity = Entity();
-//		entity.AddComponent(CompPosition(pos.x,pos.y,rotate));
-//		entity.AddComponent(CompPhysics(velocity.x,velocity.y,1,1));
-//		entity.AddComponent(CompLifeSpan(200));
-//		entity.AddComponent(CompVisible(playerShotData,"White",LAYER_PLAYER_SHOT));
-//		entity.AddComponent(CompCollide(LAYER_ENEMY));
-//		entity.AddComponent(CompPlayerShot());
-//		entities.Insert(entity);
 	}
 }
 
@@ -689,14 +631,8 @@ SysDestroyer = function()
 				{
 					if ( e.components["Prefab"] )
 					{
-						prefabs.Delete(e.components["Prefab"].Type, e.components["Prefab"].Position)
+						prefabs.Delete(e.components["Prefab"].Type, e.components["Prefab"].Position);
 					}
-								if ( EnemyA.length > 1)
-					{
-						EnemyA.data[EnemyA.length-1].components.Prefab.Position = position;
-					}
-					EnemyA.Delete(position);
-
 					entities[layer].Delete(eIdx);
 				}
 			}
@@ -1047,13 +983,14 @@ function PrefabManager()
 			entity.AddComponent(CompPhysics());
 			entity.AddComponent(CompLifeSpan());
 			entity.AddComponent(CompVisible());
+			entity.AddComponent(CompVisible(explosionData,colour,LAYER_ENEMY));
 			entity.AddComponent(CompPrefab("Particle"));
 			
 			console.log("Creating particle");
 		}
 
 		ec = entity.components.Prefab;
-		ec.Type = "Particle";
+//		ec.Type = "Particle";
 		ec.Position = particles.length;
 		
 		var ec = entity.components.Position;
@@ -1070,10 +1007,10 @@ function PrefabManager()
 		ec = entity.components.Visible;
 		ec.Drawdata = explosionData;
 		ec.Colour = colour;
-		ec.Layer = LAYER_PLAYER;
+		ec.Layer = 0;
 
 		ec = entity.components.Lifespan;
-		ec.MaxAge = 50;
+		ec.MaxAge = 50 + Math.floor(Math.random() * 20);
 		ec.Age = 0;
 
 		particles.Insert(entity);
@@ -1102,7 +1039,7 @@ function PrefabManager()
 		}
 
 		ec = entity.components.Prefab;
-		ec.Type = "EnemyA";
+//		ec.Type = "EnemyA";
 		ec.Position = EnemyA.length;
 		
 		var ec = entity.components.Position;
@@ -1117,11 +1054,56 @@ function PrefabManager()
 		ec.Drag = 1;
 
 		ec = entity.components.Visible;
-		ec.Drawdata = enemyData;
-		ec.Colour = "Green";
-		ec.Layer = LAYER_ENEMY;
+//		ec.Drawdata = enemyData;
+//		ec.Colour = "Yellow";
+//		ec.Layer = LAYER_ENEMY;
 
 		EnemyA.Insert(entity);
+		entities[LAYER_ENEMY].Insert(entity);
+
+		return entity;
+	}
+
+	obj.CreateEnemyB = function ( xpos, ypos)
+	{
+		var entity = EnemyA.Reclaim();
+		if ( entity == null )
+		{
+			var entity = Entity();
+			var colour = "Green";
+
+
+			entity.AddComponent(CompPosition());
+			entity.AddComponent(CompPhysics());
+			entity.AddComponent(CompScreenBounce());
+			entity.AddComponent(CompEnemyA());
+
+			entity.AddComponent(CompCollide(LAYER_PLAYER | LAYER_PLAYER_SHOT));
+			entity.AddComponent(CompVisible(enemyData,colour,LAYER_ENEMY));
+			entity.AddComponent(CompPrefab("EnemyB"));
+		}
+
+		ec = entity.components.Prefab;
+//		ec.Type = "EnemyB";
+		ec.Position = EnemyA.length;
+		
+		var ec = entity.components.Position;
+		ec.Position.x = xpos;
+		ec.Position.y = ypos;
+		ec.Rotation = 0;
+
+		ec = entity.components.Physics
+		ec.Velocity.x = (Math.random()-.5)*4;
+		ec.Velocity.y = (Math.random()-.5)*4;
+		ec.Acceleration = 1;
+		ec.Drag = 1;
+
+		ec = entity.components.Visible;
+//		ec.Drawdata = enemyData;
+//		ec.Colour = "Green";
+//		ec.Layer = LAYER_ENEMY;
+
+		EnemyB.Insert(entity);
 		entities[LAYER_ENEMY].Insert(entity);
 
 		return entity;
@@ -1145,7 +1127,7 @@ function PrefabManager()
 		}
 
 		ec = entity.components.Prefab;
-		ec.Type = "PlayerShot";
+//		ec.Type = "PlayerShot";
 		ec.Position = playerShots.length;
 		
 		var ec = entity.components.Position;
@@ -1180,7 +1162,7 @@ function PrefabManager()
 	
 	obj.Delete = function(type, position)
 	{
-		if ( type = "Particle")
+		if ( type == "Particle")
 		{
 			// Bit of a Hack
 			// we need to repoint the last entity prefab entry to contain the position
@@ -1191,7 +1173,7 @@ function PrefabManager()
 			}
 			particles.Delete(position);
 		}
-		if ( type = "PlayerShot")
+		if ( type == "PlayerShot")
 		{
 			// Bit of a Hack
 			// we need to repoint the last entity prefab entry to contain the position
@@ -1202,7 +1184,7 @@ function PrefabManager()
 			}
 			playerShots.Delete(position);
 		}
-		if ( type = "EnemyA")
+		if ( type == "EnemyA")
 		{
 			// Bit of a Hack
 			// we need to repoint the last entity prefab entry to contain the position
@@ -1212,6 +1194,17 @@ function PrefabManager()
 				EnemyA.data[EnemyA.length-1].components.Prefab.Position = position;
 			}
 			EnemyA.Delete(position);
+		}
+		if ( type == "EnemyB")
+		{
+			// Bit of a Hack
+			// we need to repoint the last entity prefab entry to contain the position
+			// of the one we are deleting ( as that is where it will end up after the delete )
+			if ( EnemyB.length > 1)
+			{
+				EnemyB.data[EnemyB.length-1].components.Prefab.Position = position;
+			}
+			EnemyB.Delete(position);
 		}
 	}
 	
